// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`astro config snapshot: full config structure (TS present): astro-full-config-ts 1`] = `
[
  {
    "name": "hexadrop/astro/setup",
    "plugins": [
      "astro",
    ],
  },
  {
    "files": [
      "*.astro",
      "**/*.astro",
    ],
    "name": "hexadrop/astro/setup/parser",
    "plugins": undefined,
    "processor": "astro/client-side-ts",
  },
  {
    "files": [
      "**/*.astro/*.js",
      "*.astro/*.js",
    ],
    "name": "hexadrop/astro/setup/parser/javascript",
    "plugins": undefined,
  },
  {
    "files": [
      "**/*.astro/*.ts",
      "*.astro/*.ts",
    ],
    "name": "hexadrop/astro/setup/parser/javascript",
    "plugins": undefined,
  },
  {
    "files": [
      "*.astro",
      "**/*.astro",
    ],
    "name": "hexadrop/astro/rules",
    "plugins": undefined,
    "rules": {
      "astro/missing-client-only-directive-value": "error",
      "astro/no-conflict-set-directives": "error",
      "astro/no-deprecated-astro-canonicalurl": "error",
      "astro/no-deprecated-astro-fetchcontent": "error",
      "astro/no-deprecated-astro-resolve": "error",
      "astro/no-deprecated-getentrybyslug": "error",
      "astro/no-unused-define-vars-in-style": "error",
      "astro/valid-compile": "error",
      "no-useless-assignment": "off",
    },
  },
]
`;

exports[`astro config snapshot: full config structure (JS only): astro-full-config-js 1`] = `
[
  {
    "name": "hexadrop/astro/setup",
    "plugins": [
      "astro",
    ],
  },
  {
    "files": [
      "*.astro",
      "**/*.astro",
    ],
    "name": "hexadrop/astro/setup/parser",
    "plugins": undefined,
    "processor": "astro/astro",
  },
  {
    "files": [
      "**/*.astro/*.js",
      "*.astro/*.js",
    ],
    "name": "hexadrop/astro/setup/parser/javascript",
    "plugins": undefined,
  },
  {
    "files": [
      "*.astro",
      "**/*.astro",
    ],
    "name": "hexadrop/astro/rules",
    "plugins": undefined,
    "rules": {
      "astro/missing-client-only-directive-value": "error",
      "astro/no-conflict-set-directives": "error",
      "astro/no-deprecated-astro-canonicalurl": "error",
      "astro/no-deprecated-astro-fetchcontent": "error",
      "astro/no-deprecated-astro-resolve": "error",
      "astro/no-deprecated-getentrybyslug": "error",
      "astro/no-unused-define-vars-in-style": "error",
      "astro/valid-compile": "error",
      "no-useless-assignment": "off",
    },
  },
]
`;
